samples/_failures_safe/1761406932_d5506e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bf9362b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4bf9362b.c:166:30: error: expected ‘;’ at end of input
  166 |         column += (int)strlen
      |                              ^
      |                              ;
./samples/SAFE/__tmp_4bf9362b.c:166:9: error: expected declaration or statement at end of input
  166 |         column += (int)strlen
      |         ^~~~~~
./samples/SAFE/__tmp_4bf9362b.c:166:9: error: expected declaration or statement at end of input
